# voice-redline

./: .env.example  .gitignore  Makefile  README.md  babel.cfg  data_dictionary.md  jest.config.js  package-lock.json  package.json  project_structure.md  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  roadmap.md  todos.txt  update_imports.py
app/: __init__.py  config.py  main.py
app/middleware/: rate_limit.py
app/services/: __init__.py  ai_processor.py  command_handler.py  document_editor.py
app/utils/: __init__.py  audio.py  logging.py
backup/src/: python_main.py  src_main.py
docs/: conf.py  dev_dependencies.md  index.rst  testing.md
extension/: background.js  content.js  feedback.js  manifest.json  popup.html  popup.js  progress.js  shortcuts.js  test.js
scripts/: compile_translations.py  setup_translations.py
tests/: __init__.py  conftest.py  test_message_loader.py
tests/constants/: message_loader.py  test_messages.py
tests/data/: __init__.py  generate_sample_audio.py
tests/e2e/: __init__.py  conftest.py  test_extension.py  test_full_workflow.py  test_user_workflow.py
tests/integration/: __init__.py  test_ai_processor.py  test_api_endpoints.py  test_audio_processing.py  test_browser_interaction.py  test_groq_integration.py  test_integration.py  test_main.py  test_message_integration.py  test_websocket.py
tests/unit/: __init__.py  test_ai_processor.py  test_config.py  (+5 more)
tests_backup_20241203/: test_ai_processor.py  test_config.py  test_integration.py  test_main.py  test_redline_generator.py  test_voice_processor.py
(+4 files in other folders)
