[project]
name = "voice-redline"
version = "0.1.0"
description = "Voice-controlled redlining for Google Docs"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
pythonpath = [
    "."
]
testpaths = [
    "tests"
]
markers = [
    "asyncio: mark test as async",
] 